--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
-        android:label="chatnews"
+        android:label="template"
         android:name="${applicationName}"
         android:icon="@mipmap/icon">
         <activity
