--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "chatnews" "\0"
+            VALUE "FileDescription", "template" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "chatnews" "\0"
+            VALUE "InternalName", "template" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "chatnews.exe" "\0"
-            VALUE "ProductName", "chatnews" "\0"
+            VALUE "OriginalFilename", "template.exe" "\0"
+            VALUE "ProductName", "template" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
