--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,21 +14,21 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   get_it: ^8.0.3
-  flutter_bloc: ^8.1.6
+  flutter_bloc: ^9.1.1
   dio: ^5.7.0
   shared_preferences: ^2.3.3
   dartz: ^0.10.1
   equatable: ^2.0.7
-  requests_inspector: ^4.2.0
+  requests_inspector: ^5.0.0
   cached_network_image: ^3.4.1
   flutter_svg: ^2.0.16
-  internet_connection_checker: ^1.0.0+1
+  internet_connection_checker: ^3.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
 
